--- a/en/index.html
+++ b/en/index.html
@@ -4069,6 +4069,13 @@
 
   <!-- index.css contains all or most css -->
   <link rel="stylesheet" href="../index.css" />
+  <style type="text/css">
+    /* .elementor-column-wrap .elementor-element-populated {
+      margin-top: 30px;
+      margin-left: 30px;
+      margin-bottom: 20px;
+    } */
+  </style>
 </head>
 
 <body
