--- a/en/o-nas/index.html
+++ b/en/o-nas/index.html
@@ -2988,6 +2988,13 @@
       width: 180%;
     }
   </style>
+  <style type="text/css">
+    .elementor-column-wrap .elementor-element-populated {
+      margin-top: 10px;
+      margin-left: 10px;
+      margin-bottom: 10px;
+    }
+  </style>
   <link rel="stylesheet" href="../../index.css" />
 </head>
 
