--- a/o-nas/index.html
+++ b/o-nas/index.html
@@ -3012,6 +3012,14 @@
         api_key: 'wg_52b262c5f62ef353cab6eedf419cf3222',
       });
     </script> -->
+
+  <style type="text/css">
+    .elementor-column-wrap .elementor-element-populated {
+      margin-top: 10px;
+      margin-left: 10px;
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
 
 <body
