--- a/o-nas/index.html
+++ b/o-nas/index.html
@@ -2755,7 +2755,7 @@
         function () {
           (i[r].q = i[r].q || []).push(arguments);
         }),
-      (i[r].l = 1 * new Date());
+        (i[r].l = 1 * new Date());
       (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
       a.async = 1;
       a.src = g;
@@ -3599,6 +3599,17 @@
                                           class="elementor-widget-container">
                                           <ul
                                             class="elementor-icon-list-items">
+                                            <li
+                                              class="elementor-icon-list-item">
+                                              <span
+                                                class="elementor-icon-list-icon">
+                                                <i
+                                                  aria-hidden="true"
+                                                  class="fas fa-check"></i>
+                                              </span>
+                                              <span
+                                                class="elementor-icon-list-text">uczestnik i beneficjent kapitałowy Programu Akceleracyjnego KITS organizowanego przez Kraków Miastem Startupów i UBS</span>
+                                            </li>
                                             <li
                                               class="elementor-icon-list-item">
                                               <span
