--- a/en/o-nas/index.html
+++ b/en/o-nas/index.html
@@ -2741,7 +2741,7 @@
         function () {
           (i[r].q = i[r].q || []).push(arguments);
         }),
-      (i[r].l = 1 * new Date());
+        (i[r].l = 1 * new Date());
       (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
       a.async = 1;
       a.src = g;
@@ -3573,6 +3573,18 @@
                                           class="elementor-widget-container">
                                           <ul
                                             class="elementor-icon-list-items">
+                                            <li
+                                              class="elementor-icon-list-item">
+                                              <span
+                                                class="elementor-icon-list-icon">
+                                                <i
+                                                  aria-hidden="true"
+                                                  class="fas fa-check"
+                                                  data-wg-notranslate=""></i>
+                                              </span>
+                                              <span
+                                                class="elementor-icon-list-text">participant and capital beneficiary of KITS Acceleration Programme by Kraków Miastem Startupów and UBS</span>
+                                            </li>
                                             <li
                                               class="elementor-icon-list-item">
                                               <span
