--- a/index.html
+++ b/index.html
@@ -4210,7 +4210,7 @@
         function () {
           (i[r].q = i[r].q || []).push(arguments);
         }),
-      (i[r].l = 1 * new Date());
+        (i[r].l = 1 * new Date());
       (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
       a.async = 1;
       a.src = g;
@@ -12959,7 +12959,7 @@
                                                   class="__cf_email__"
                                                   data-cfemail="7d121b1b141e183d15181c1109151104530d11">[email&#160;protected]</span></span></a>
                                             <br />
-                                            Telefon: 795 271 652
+                                            Telefon: +48 795 271 652
                                             <br />
                                           </div>
                                         </div>
@@ -13151,11 +13151,11 @@
                                         var baseUrl =
                                           'https://cartodb-basemaps-{s}.global.ssl.fastly.net/rastertiles/light_all/{z}/{x}/{y}.png',
                                           base = !baseUrl && window.MQ ?
-                                          MQ.mapLayer() :
-                                          L.tileLayer(baseUrl, {
-                                            subdomains: 'abc',
-                                            detectRetina: 0,
-                                          }),
+                                            MQ.mapLayer() :
+                                            L.tileLayer(baseUrl, {
+                                              subdomains: 'abc',
+                                              detectRetina: 0,
+                                            }),
                                           options = L.Util.extend({}, {
                                             maxZoom: 20,
                                             minZoom: 0,
