--- a/en/index.html
+++ b/en/index.html
@@ -3814,7 +3814,7 @@
         function () {
           (i[r].q = i[r].q || []).push(arguments);
         }),
-      (i[r].l = 1 * new Date());
+        (i[r].l = 1 * new Date());
       (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
       a.async = 1;
       a.src = g;
@@ -5284,7 +5284,7 @@
                                                   class="__cf_email__"
                                                   data-cfemail="d2bdb4b4bbb1b792bab7b3bea6babeabfca2be">[email&#160;protected]</span></span></a>
                                             <br />
-                                            Telephone: 795 271 652
+                                            Telephone: +48 795 271 652
                                             <br />
                                           </div>
                                         </div>
@@ -5476,11 +5476,11 @@
                                         var baseUrl =
                                           'https://cartodb-basemaps-{s}.global.ssl.fastly.net/rastertiles/light_all/{z}/{x}/{y}.png',
                                           base = !baseUrl && window.MQ ?
-                                          MQ.mapLayer() :
-                                          L.tileLayer(baseUrl, {
-                                            subdomains: 'abc',
-                                            detectRetina: 0,
-                                          }),
+                                            MQ.mapLayer() :
+                                            L.tileLayer(baseUrl, {
+                                              subdomains: 'abc',
+                                              detectRetina: 0,
+                                            }),
                                           options = L.Util.extend({}, {
                                             maxZoom: 20,
                                             minZoom: 0,
