--- a/en/o-nas/index.html
+++ b/en/o-nas/index.html
@@ -3583,6 +3583,18 @@
                                                   data-wg-notranslate=""></i>
                                               </span>
                                               <span
+                                                class="elementor-icon-list-text">participant and capital beneficiary of Platforma Startowa Unicorn Hub</span>
+                                            </li>
+                                            <li
+                                              class="elementor-icon-list-item">
+                                              <span
+                                                class="elementor-icon-list-icon">
+                                                <i
+                                                  aria-hidden="true"
+                                                  class="fas fa-check"
+                                                  data-wg-notranslate=""></i>
+                                              </span>
+                                              <span
                                                 class="elementor-icon-list-text">participant and capital beneficiary of KITS Acceleration Programme by Kraków Miastem Startupów and UBS</span>
                                             </li>
                                             <li
