--- a/o-nas/index.html
+++ b/o-nas/index.html
@@ -3608,6 +3608,17 @@
                                                   class="fas fa-check"></i>
                                               </span>
                                               <span
+                                                class="elementor-icon-list-text">uczestnik i beneficjent kapitałowy Platformy Startowej Unicorn Hub</span>
+                                            </li>
+                                            <li
+                                              class="elementor-icon-list-item">
+                                              <span
+                                                class="elementor-icon-list-icon">
+                                                <i
+                                                  aria-hidden="true"
+                                                  class="fas fa-check"></i>
+                                              </span>
+                                              <span
                                                 class="elementor-icon-list-text">uczestnik i beneficjent kapitałowy Programu Akceleracyjnego KITS organizowanego przez Kraków Miastem Startupów i UBS</span>
                                             </li>
                                             <li
