--- a/en/index.html
+++ b/en/index.html
@@ -6600,6 +6600,7 @@
     </ul>
   </aside>
 </body>
+<script type="text/javascript"> _linkedin_partner_id = "2362481"; window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || []; window._linkedin_data_partner_ids.push(_linkedin_partner_id); </script><script type="text/javascript"> (function(){var s = document.getElementsByTagName("script")[0]; var b = document.createElement("script"); b.type = "text/javascript";b.async = true; b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js"; s.parentNode.insertBefore(b, s);})(); </script> <noscript> <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=2362481&fmt=gif" /> </noscript>
 
 <!-- Mirrored from healthly.pl/en/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 21 Apr 2020 16:13:03 GMT -->
 
