--- a/en/kontakt/index.html
+++ b/en/kontakt/index.html
@@ -3095,7 +3095,7 @@
                                           <div class="elementor-text-editor elementor-clearfix">
                                             Telemedicine Solutions sp. z o.o.<br>
                                             <br>
-                                            Email: <a href="../../cdn-cgi/l/email-protection.html#1d727b7b747e785d75787c7169757164336d71"><span style="font-weight: 400;"><span class="__cf_email__"
+                                            Email: <a href="mailto:office@healthly.pl"><span style="font-weight: 400;"><span class="__cf_email__"
                                                   data-cfemail="2f404949464c4a6f474a4e435b474356015f43">[email&#160;protected]</span></span></a><br>
                                             Telephone: +48 795 271 652<br>
                                             <br>
