--- a/index.html
+++ b/index.html
@@ -12848,7 +12848,7 @@
                                             <br /><br />
                                             Email:
                                             <a
-                                              href="cdn-cgi/l/email-protection.html#bad5dcdcd3d9dffad2dfdbd6ced2d6c394cad6"><span style="font-weight: 400;"><span
+                                              href="mailto:office@healthly.pl"><span style="font-weight: 400;"><span
                                                   class="__cf_email__"
                                                   data-cfemail="7d121b1b141e183d15181c1109151104530d11">[email&#160;protected]</span></span></a>
                                             <br />
