--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -3143,7 +3143,7 @@
                                           <div class="elementor-text-editor elementor-clearfix">
                                             Telemedicine Solutions sp. z o.o.<br>
                                             <br>
-                                            Email: <a href="../cdn-cgi/l/email-protection.html#305f5656595355705855515c44585c491e405c"><span style="font-weight: 400;"><span class="__cf_email__"
+                                            Email: <a href="mailto:office@healthly.pl"><span style="font-weight: 400;"><span class="__cf_email__"
                                                   data-cfemail="a4cbc2c2cdc7c1e4ccc1c5c8d0ccc8dd8ad4c8">[email&#160;protected]</span></span></a><br>
                                             Telefon: +48 795 271 652<br>
                                             <br>
