--- a/en/index.html
+++ b/en/index.html
@@ -5175,7 +5175,7 @@
                                             <br /><br />
                                             Email:
                                             <a
-                                              href="../cdn-cgi/l/email-protection.html#4d222b2b242e280d25282c2139252134633d21"><span style="font-weight: 400;"><span
+                                              href="mailto:office@healthly.pl"><span style="font-weight: 400;"><span
                                                   class="__cf_email__"
                                                   data-cfemail="d2bdb4b4bbb1b792bab7b3bea6babeabfca2be">[email&#160;protected]</span></span></a>
                                             <br />
